<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jorgechp.npi.practica4.PuntoFotoBrujula.MainActivity" >

    <TextView
        android:id="@+id/twEste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/twOeste"
        android:layout_alignBottom="@+id/twOeste"
        android:layout_alignParentRight="true"
        android:text="@string/RELOJ_ESTE"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btIr"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etPuntoCardinal"
        android:layout_alignParentRight="true"
        android:text="IR" />

    <EditText
        android:id="@+id/etPuntoCardinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btIr"
        android:ems="10"
        android:hint="@string/TW_PUNTO_cARDINAL"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/twNorte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twDescripcion"
        android:layout_centerHorizontal="true"
        android:text="@string/RELOJ_N"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/twDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btIr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/TW_DESCRIPCION_1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/twOeste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twNorte"
        android:layout_marginTop="45dp"
        android:layout_toLeftOf="@+id/twDescripcion"
        android:text="@string/RELOJ_CENTRO"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imPosActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twNorte"
        android:layout_centerHorizontal="true"
        android:src="@drawable/androidpointer080814" />

    <ImageView
        android:id="@+id/imPosObjetivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imPosActual"
        android:layout_alignTop="@+id/imPosActual"
        android:src="@drawable/androidpointer080814_red" />

    <TextView
        android:id="@+id/twSur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/twNorte"
        android:layout_below="@+id/imPosActual"
        android:text="@string/RELOJ_S"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/twDescripcion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPuntoCardinal"
        android:layout_below="@+id/twSur"
        android:layout_marginTop="15dp"
        android:text="@string/TW_DESCRIPCION_2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/imResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/twDescripcion2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/twDescripcion2"
        android:layout_below="@+id/twDescripcion2"
        android:layout_marginTop="24dp"
        android:background="#00000000" />

    <CheckBox
        android:id="@+id/cbBearing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/twOeste"
        android:layout_below="@+id/etPuntoCardinal"
        android:text="@string/CB_BEARING"
        android:textSize="9sp" />

</RelativeLayout>